--- a/src/app/admin/orders/components/quick-order/order-update-manager/order-update-manager.component.scss
+++ b/src/app/admin/orders/components/quick-order/order-update-manager/order-update-manager.component.scss
@@ -1,13 +1,16 @@
 @import '/src/variables.scss';
+
 ::ng-deep {
   .new_order_dialog {
 
     .mat-dialog-container {
       padding: 0;
       background-color: #f2f2f2;
+
       .order_new_wrapper {
         height: 100%;
         width: 100%;
+
         .new_order_header {
           display: flex;
           align-items: center;
@@ -40,7 +43,7 @@
             p {
               margin: 0;
               font-size: 16px;
-              font-weight: bold;
+              font-weight: 500;
               color: #1d2271;
               border-radius: 5px;
               border: 1px solid #1d2271;
@@ -70,27 +73,29 @@
           }
 
 
-          .id_Pill{
-              background-color: #2e8b8e;
-              color: #000314;
-              padding: 0px 14px;
-              border-radius: 7px;
-              margin: 0px;
-              margin-right: 20px;
-              font-weight: 400;
+          .id_Pill {
+            background-color: #2e8b8e;
+            color: #000314;
+            padding: 0px 14px;
+            border-radius: 7px;
+            margin: 0px;
+            margin-right: 20px;
+            font-weight: 400;
 
-              &.new{
-                  background-color: #4e555b;
-                  color: #ffffff;
-              }
-              &.completed{
-                  background-color: #1c7430;
-                  color: #ffffff;
-              }
-              &.cancelled{
-                  background-color: #1c7430;
-                  color: #ffffff;
-              }
+            &.new {
+              background-color: #4e555b;
+              color: #ffffff;
+            }
+
+            &.completed {
+              background-color: #1c7430;
+              color: #ffffff;
+            }
+
+            &.cancelled {
+              background-color: #1c7430;
+              color: #ffffff;
+            }
           }
         }
 
@@ -101,6 +106,9 @@
           background-color: #ffffff;
           border-top: 1px solid #e2e2e2;
           border-bottom: 1px solid #e2e2e2;
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
 
           .search_wraper {
             width: 500px;
@@ -116,6 +124,48 @@
               font-size: 14px;
               font-weight: 500;
               color: #1d2271;
+            }
+          }
+
+          .customer_wrapper {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            text-align: right;
+            position: relative;
+
+            & .edit_btn {
+              position: absolute;
+              top: 0px;
+              right: 0px;
+              transform: translateX(100%) scale(0);
+              transition: .2s;
+              background-color: #ffffff;
+              box-shadow: 0 0 2px 2px rgba(#000000, 0.2);
+
+              & img {
+                width: 16px;
+              }
+            }
+
+            &:hover {
+              & .edit_btn {
+                transform: translateX(0) scale(1);
+              }
+
+            }
+
+
+            p {
+              font-size: 12px;
+              margin-bottom: 5px;
+              line-height: 1;
+              white-space: nowrap;
+
+
+              &:last-child {
+                margin-bottom: 0px;
+              }
             }
           }
         }
@@ -135,22 +185,26 @@
               border-right: 1px solid #ddd;
 
               &::-webkit-scrollbar {
-                  width: 5px;
-                  height: 5px;
+                width: 5px;
+                height: 5px;
               }
+
               &::-webkit-scrollbar-track {
-                  background-color: transparent;
+                background-color: transparent;
               }
+
               &::-webkit-scrollbar-thumb {
-                  background-color: #c8c8c8;
-                  border-radius: 10px;
+                background-color: #c8c8c8;
+                border-radius: 10px;
               }
 
               .selection_list {
                 outline: none;
+
                 .selection_list_header {
 
                 }
+
                 .selection_list_option {
                   .selection_list_line {
                     display: flex;
@@ -161,27 +215,40 @@
             }
           }
         }
+
         .footer_row {
           padding: 15px 20px;
           background-color: #ffffff;
           border-top: 1px solid #e2e2e2;
+          display: flex;
+          align-items: center;
+          justify-content: flex-end;
+
+          & button {
+            &:not(:last-child) {
+              margin-right: 10px;
+            }
+          }
         }
       }
     }
   }
 
-  .tab_inner_body{
+  .tab_inner_body {
     &::-webkit-scrollbar {
-        width: 5px;
-        height: 5px;
+      width: 5px;
+      height: 5px;
     }
+
     &::-webkit-scrollbar-track {
-        background-color: transparent;
+      background-color: transparent;
     }
+
     &::-webkit-scrollbar-thumb {
-        background-color: #c8c8c8;
-        border-radius: 10px;
+      background-color: #c8c8c8;
+      border-radius: 10px;
     }
+
     // padding: 15px;
     height: calc(100% - 78px);
     min-height: 289px;
@@ -198,7 +265,7 @@
 
   }
 
-  .remaning_box{
+  .remaning_box {
     border-top: 1px solid #ddd;
     border-left: 1px solid #ddd;
     background-color: transparent;
@@ -207,202 +274,217 @@
     margin-right: -15px;
     padding: 8px 15px;
     margin-top: 0px;
-    &.floating_bottom{
-        position:absolute;
-        left: 0;
-        right:0;
-        bottom: 0;
-    }
-    h4{
-        font-size: 14px;
-        margin-bottom: 10px;
-        line-height: 1;
-        font-weight: 500;
-        color: #505050;
-    }
-    .bal_change_box{
-        p{
-            font-size: 16px;
-            margin-bottom: 20px;
-        }
-    }
-}
 
-.order_item_wrapper {
-  .mat-list-option{
-    height: auto !important;
-    .mat-list-item-content{
-      padding: 0 !important;
+    &.floating_bottom {
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
     }
-    .mat-list-text{
-      padding-right: 0px !important;
+
+    h4 {
+      font-size: 14px;
+      margin-bottom: 10px;
+      line-height: 1;
+      font-weight: 500;
+      color: #505050;
+    }
+
+    .bal_change_box {
+      p {
+        font-size: 16px;
+        margin-bottom: 20px;
+      }
     }
   }
-  margin-bottom: 0;
-  &::-webkit-scrollbar {
+
+  .order_item_wrapper {
+    .mat-list-option {
+      height: auto !important;
+
+      .mat-list-item-content {
+        padding: 0 !important;
+      }
+
+      .mat-list-text {
+        padding-right: 0px !important;
+      }
+    }
+
+    margin-bottom: 0;
+
+    &::-webkit-scrollbar {
       width: 5px;
       height: 5px;
-  }
-  &::-webkit-scrollbar-track {
+    }
+
+    &::-webkit-scrollbar-track {
       background-color: transparent;
-  }
-  &::-webkit-scrollbar-thumb {
+    }
+
+    &::-webkit-scrollbar-thumb {
       background-color: #c8c8c8;
       border-radius: 10px;
-  }
-  max-height: calc(100vh - 247px);
-  overflow-y: auto;
-  // & .img_item {
-  //     width: 90px;
-  //     height: 90px;
-  //     background-color: #fff;
-  //     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-  //     border-radius: 50%;
-  //     margin-right: 15px;
-  //     overflow: hidden;
+    }
 
-  //     @media (max-width: 1400px) {
-  //       width: 45px;
-  //       height: 45px;
-  //     }
+    max-height: calc(100vh - 247px);
+    overflow-y: auto;
+    // & .img_item {
+    //     width: 90px;
+    //     height: 90px;
+    //     background-color: #fff;
+    //     box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+    //     border-radius: 50%;
+    //     margin-right: 15px;
+    //     overflow: hidden;
 
-  //     & img {
-  //         width: 100%;
-  //         height: 100%;
-  //         object-fit: cover;
-  //     }
-  // }
-  .order_item_card {
+    //     @media (max-width: 1400px) {
+    //       width: 45px;
+    //       height: 45px;
+    //     }
+
+    //     & img {
+    //         width: 100%;
+    //         height: 100%;
+    //         object-fit: cover;
+    //     }
+    // }
+    .order_item_card {
       display: flex;
       // grid-template-columns: 1fr 120px;
       // grid-auto-rows: minmax(min-content, max-content);
       background-color: transparent;
-      box-shadow:none;
+      box-shadow: none;
       border-radius: 0px;
       position: relative;
       border-bottom: 1px solid #ddd;
 
       &:not(:last-child) {
-          margin-bottom: 2rem;
+        margin-bottom: 2rem;
       }
 
 
       & .order-details {
-          padding: 10px;
+        padding: 10px;
 
+
+        @media (max-width: 1400px) {
+          padding: 10px;
+        }
+
+        & p.product_name {
+          margin: 0;
+          font-size: 20px;
+          font-weight: 500;
+          color: rgba(#000, 0.8);
+          margin-bottom: 10px;
+          display: flex;
+          align-items: center;
 
           @media (max-width: 1400px) {
-            padding: 10px;
+            font-size: 12px;
+            line-height: 14px;
+            margin-bottom: 5px;
           }
 
-          & p.product_name {
-              margin: 0;
-              font-size: 20px;
-              font-weight: 500;
-              color: rgba(#000, 0.8);
+          & .order_item_card_strip {
+            padding: 3px 7px;
+            background-color: rgba(255, 115, 0, 1);
+            font-size: 1.2rem;
+            line-height: 1;
+            color: #fff;
+            margin-left: 10px;
+            border-radius: 3px;
+          }
+        }
+
+        & p.product_price {
+          margin: 0;
+          display: flex;
+          font-size: 14px;
+          font-weight: 500;
+          line-height: 1.3;
+          color: #8e8e8e;
+
+          @media (max-width: 1400px) {
+            font-size: 12px;
+            &:first-child {
+
               margin-bottom: 10px;
-              display: flex;
-              align-items: center;
-
-              @media (max-width: 1400px) {
-                font-size: 12px;
-                line-height: 14px;
-                margin-bottom: 5px;
-              }
-
-              & .order_item_card_strip {
-                  padding: 3px 7px;
-                  background-color: rgba(255, 115, 0, 1);
-                  font-size: 1.2rem;
-                  line-height: 1;
-                  color: #fff;
-                  margin-left: 10px;
-                  border-radius: 3px;
-              }
+            }
           }
-          & p.product_price {
-              margin: 0;
-              display: flex;
-              font-size: 14px;
-              font-weight: 500;
-              line-height: 1.3;
-              color: #8e8e8e;
 
-              @media (max-width: 1400px) {
-                font-size: 12px;
-                &:first-child {
-
-                  margin-bottom: 10px;
-                }
-              }
-
-              small {
-                margin-right: 5px;
-              }
-
+          small {
+            margin-right: 5px;
           }
+
+        }
       }
 
       & .action_menu {
-          padding: 10px 15px 10px 0px;
-          align-self: flex-end;
+        padding: 10px 15px 10px 0px;
+        align-self: flex-end;
+
+        @media (max-width: 1400px) {
+          padding: 10px 10px 10px 0px;
+        }
+
+        .item_track_wrapper {
+          margin: 10px 0px 0;
 
           @media (max-width: 1400px) {
-            padding: 10px 10px 10px 0px;
+            margin-top: 10px;
           }
 
-          .item_track_wrapper {
-            margin: 10px 0px 0;
+          & .item_track {
+            font-size: 12px;
+            line-height: 1;
+            padding: 3px 5px;
+            border-radius: 10px;
+            text-align: center;
+            min-width: 30px;
+            margin: 0 3px;
+            cursor: pointer;
+
 
             @media (max-width: 1400px) {
-              margin-top: 10px;
+              font-size: 10px;
             }
-            & .item_track {
-              font-size: 12px;
-              line-height: 1;
-              padding: 3px 5px;
-              border-radius: 10px;
-              text-align: center;
-              min-width: 30px;
-              margin: 0 3px;
-              cursor: pointer;
 
-
-              @media (max-width: 1400px) {
-                font-size: 10px;
-              }
-
-              &.served {
-                background-color: rgba($color-success, 0.1);
-                border: 1px solid rgba($color-success, 0.4);
-                color: $color-success;
-              }
-              &.kitchen {
-                background-color: rgba($color-accent, 0.1);
-                border: 1px solid rgba($color-accent, 0.4);
-                color: $color-accent;
-              }
-              &.ready {
-                background-color: rgba($color-primary, 0.1);
-                border: 1px solid rgba($color-primary, 0.4);
-                color: $color-primary;
-              }
-              &.rejected {
-                background-color: rgba($color-warning, 0.1);
-                border: 1px solid rgba($color-warning, 0.4);
-                color: $color-warning;
-              }
-
+            &.served {
+              background-color: rgba($color-success, 0.1);
+              border: 1px solid rgba($color-success, 0.4);
+              color: $color-success;
             }
+
+            &.kitchen {
+              background-color: rgba($color-accent, 0.1);
+              border: 1px solid rgba($color-accent, 0.4);
+              color: $color-accent;
+            }
+
+            &.ready {
+              background-color: rgba($color-primary, 0.1);
+              border: 1px solid rgba($color-primary, 0.4);
+              color: $color-primary;
+            }
+
+            &.rejected {
+              background-color: rgba($color-warning, 0.1);
+              border: 1px solid rgba($color-warning, 0.4);
+              color: $color-warning;
+            }
+
           }
+        }
 
       }
+    }
   }
-}
 
-.small_btn{
-  width: 110px;
-  padding: 0 2px;
-}
+  .small_btn {
+    width: 110px;
+    padding: 0 2px;
+  }
 
 }
