--- a/src/app/admin/orders/components/quick-order/quick-order.component.scss
+++ b/src/app/admin/orders/components/quick-order/quick-order.component.scss
@@ -78,3 +78,12 @@
       }
     }
   }
+
+  .height_handler {
+    height: calc(100vh - 250px);
+    overflow: auto;
+  }
+
+  .completed_section {
+    background-color: rgba(#f2f2f2, 0.7);
+  }
