--- a/src/app/admin/product-combo/product-combo-update/product-combo-update.component.html
+++ b/src/app/admin/product-combo/product-combo-update/product-combo-update.component.html
@@ -1,130 +1,137 @@
 <form [formGroup]="form" (submit)="saveProductCombo($event)">
 
-    <div class="add_formWrapper">
-        <div class="row">
-            <div class="col-sm-auto">
-                <div class="product_imrBox">
-                    <input type="file" name="" id="prodctImg"  (change)="handleFileInput($event)">
-                    <label for="prodctImg" title="Change Image"  [ngStyle]="{'background-image': imageSrc}"></label>
-                </div>
-
-                <div class="d-flex mt-25 align-items-center mb-15">
-                    <mat-slide-toggle formControlName="isActive" class="mr-15" color="primary">Active</mat-slide-toggle>
-                </div>
-            </div>
-            <div class="col-sm col-md">
-                <div class="row">
-                      <div class="col-md-12">
-                          <mat-form-field appearance="fill" class="w-100">
-                              <mat-label>Combo Title</mat-label>
-                              <input matInput required formControlName="comboTitle" type="text">
-                          </mat-form-field>
-                      </div>
-                      <div class="col-12 col-md-6" [hidden]="userData?.roles != 'Super Admin'">
-                          <mat-form-field appearance="fill" class="w-100 mb-5">
-                              <mat-label>Company</mat-label>
-                              <mat-select formControlName="company_id" (selectionChange)="onCompanySelect()" [required]="userData?.roles == 'Super Admin'">
-                                  <mat-option *ngFor="let item of companyList" [value]="item.id">{{ item.companyName }}</mat-option>
-                              </mat-select>
-                              <mat-error>Company is required</mat-error>
-                            </mat-form-field>
-                      </div>
-                      <div class="col-12 col-md-6" [hidden]="userData?.roles != 'Super Admin' && userData?.roles != 'Company Admin' && userData?.roles != 'Company Accountant'">
-                          <mat-form-field appearance="fill" class="w-100" >
-                              <mat-label>Branch</mat-label>
-                              <mat-select matNativeControl formControlName="branch_id"  [required]="userData?.roles == 'Super Admin' || userData?.roles == 'Company Admin' || userData?.roles == 'Company Accountant'">
-                                  <mat-option *ngFor="let item of branchList;" [value]="item.id">{{ item.branchTitle }}</mat-option>
-                              </mat-select>
-                          </mat-form-field>
-                      </div>
-                      <div class="col-12">
-                          <mat-form-field appearance="fill" class="w-100">
-                              <mat-label>Description</mat-label>
-                              <textarea matInput formControlName="description" rows="3" cdkTextareaAutosize></textarea>
-                          </mat-form-field>
-                      </div>
-                      <div class="col-12">
-                          <mat-form-field appearance="fill" class="w-100">
-                              <mat-label>Price</mat-label>
-                              <input matInput formControlName="comboTotal" readonly type="text">
-                          </mat-form-field>
-                      </div>
-                      <div class="col-12">
-                          <mat-form-field appearance="fill" class="w-100">
-                              <mat-label>Packaging Charges</mat-label>
-                              <input matInput formControlName="packagingCharges" type="text">
-                          </mat-form-field>
-                      </div>
-                  </div>
-
-            </div>
+  <div class="add_formWrapper">
+    <div class="row">
+      <div class="col-sm-auto">
+        <div class="product_imrBox">
+          <input type="file" name="" id="prodctImg" (change)="handleFileInput($event)">
+          <label for="prodctImg" title="Change Image" [ngStyle]="{'background-image': imageSrc}"></label>
         </div>
 
-      <div class="row">
-
-            <div class="col-12">
-                        <div class="title_div d-flex align-items-center mb-15">
-                            <h3 class="my-0 font-1_4 font-weight-500">Combo Items</h3>
-                            <button mat-button color="primary" class="ml-10" type="button" (click)="addAnotherItem()">Add +</button>
-                        </div>
-                        <div formArrayName="items">
-                            <ng-container *ngFor="let item of items['controls']; let i=index;">
-                                <div class="row flex-nowrap gutters-10" *ngIf="!item.get('deletedFlag').value" [formGroupName]="i">
-                                    <div class="col ew-mn-50">
-                                      <mat-form-field appearance="fill" class="w-100" >
-                                          <mat-label>Product</mat-label>
-                                          <mat-select matNativeControl formControlName="productId" required (selectionChange)="onProductSelect(i, item)">
-                                              <mat-option *ngFor="let prod of productList;" [value]="prod.id">{{ prod.productName }}</mat-option>
-                                          </mat-select>
-                                      </mat-form-field>
-                                    </div>
-                                    <div class="col ew-mn-50">
-                                      <mat-form-field appearance="fill" class="w-100" *ngIf="item.get('variationList').value && item.get('variationList').value.length > 0 else novariation">
-                                          <mat-label>Variation</mat-label>
-                                          <mat-select matNativeControl formControlName="advancedPriceId" required>
-                                              <mat-option *ngFor="let variation of item.get('variationList').value;" [value]="variation.id">{{ variation.title }}</mat-option>
-                                          </mat-select>
-                                      </mat-form-field>
-
-                                      <ng-template #novariation>
-                                        <span class="variation_chip">No Variation</span>
-                                      </ng-template>
-                                    </div>
-                                    <div class="col ew-mn-50">
-                                        <mat-form-field appearance="fill" class="w-100">
-                                            <mat-label>Quantity</mat-label>
-                                            <input matInput formControlName="quantity" type="text">
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="col ew-mn-50">
-                                        <mat-form-field appearance="fill" class="w-100">
-                                            <mat-label>Price</mat-label>
-                                            <input matInput formControlName="price" type="text">
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="col ew-mn-50">
-                                        <mat-form-field appearance="fill" class="w-100">
-                                            <mat-label>Sub Total</mat-label>
-                                            <input matInput readonly formControlName="subTotal" type="text">
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="col-auto">
-                                        <button mat-button color="warn" type="button" (click)="removeItem(item, i)">Remove -</button>
-                                    </div>
-                                </div>
-                            </ng-container>
-                        </div>
-                  </div>
+        <div class="d-flex mt-25 align-items-center mb-15">
+          <mat-slide-toggle formControlName="isActive" class="mr-15" color="primary">Active</mat-slide-toggle>
+        </div>
       </div>
+      <div class="col-sm col-md">
+        <div class="row">
+          <div class="col-md-12">
+            <mat-form-field appearance="fill" class="w-100">
+              <mat-label>Combo Title</mat-label>
+              <input matInput required formControlName="comboTitle" type="text">
+            </mat-form-field>
+          </div>
+          <div class="col-12 col-md-6" [hidden]="userData?.roles != 'Super Admin'">
+            <mat-form-field appearance="fill" class="w-100 mb-5">
+              <mat-label>Company</mat-label>
+              <mat-select formControlName="company_id" (selectionChange)="onCompanySelect()"
+                          [required]="userData?.roles == 'Super Admin'">
+                <mat-option *ngFor="let item of companyList" [value]="item.id">{{ item.companyName }}</mat-option>
+              </mat-select>
+              <mat-error>Company is required</mat-error>
+            </mat-form-field>
+          </div>
+          <div class="col-12 col-md-6"
+               [hidden]="userData?.roles != 'Super Admin' && userData?.roles != 'Company Admin' && userData?.roles != 'Company Accountant'">
+            <mat-form-field appearance="fill" class="w-100">
+              <mat-label>Branch</mat-label>
+              <mat-select matNativeControl formControlName="branch_id"
+                          [required]="userData?.roles == 'Super Admin' || userData?.roles == 'Company Admin' || userData?.roles == 'Company Accountant'">
+                <mat-option *ngFor="let item of branchList;" [value]="item.id">{{ item.branchTitle }}</mat-option>
+              </mat-select>
+            </mat-form-field>
+          </div>
+          <div class="col-12">
+            <mat-form-field appearance="fill" class="w-100">
+              <mat-label>Description</mat-label>
+              <textarea matInput formControlName="description" rows="3" cdkTextareaAutosize></textarea>
+            </mat-form-field>
+          </div>
+          <div class="col-12">
+            <mat-form-field appearance="fill" class="w-100">
+              <mat-label>Price</mat-label>
+              <input matInput formControlName="comboTotal" readonly type="text">
+            </mat-form-field>
+          </div>
+          <div class="col-12">
+            <mat-form-field appearance="fill" class="w-100">
+              <mat-label>Packaging Charges</mat-label>
+              <input matInput formControlName="packagingCharges" type="text">
+            </mat-form-field>
+          </div>
+        </div>
 
-        <!-- <div class="d-flex align-items-center my-10">
-        </div>
-        <div class="d-flex align-items-center my-10">
-        </div>
-         -->
-        <div class="button_wrapper">
-            <button mat-raised-button color="primary" class="mr-20" type="submit">{{ (productComboId)?'Update':'Add'}}</button>
-            <button mat-raised-button color="warn" type="button" routerLink="/admin/product-combo/list">Cancel</button>
-        </div>
+      </div>
     </div>
+
+    <div class="row">
+
+      <div class="col-12">
+        <div class="title_div d-flex align-items-center mb-15">
+          <h3 class="my-0 font-1_4 font-weight-500">Combo Items</h3>
+          <button mat-button color="primary" class="ml-10" type="button" (click)="addAnotherItem()">Add +</button>
+        </div>
+        <div formArrayName="items">
+          <ng-container *ngFor="let item of items['controls']; let i=index;">
+            <div class="row flex-nowrap gutters-10" *ngIf="!item.get('deletedFlag').value" [formGroupName]="i">
+              <div class="col ew-mn-50">
+                <mat-form-field appearance="fill" class="w-100">
+                  <mat-label>Product</mat-label>
+                  <mat-select matNativeControl formControlName="productId" required
+                              (selectionChange)="onProductSelect(i, item)">
+                    <mat-option *ngFor="let prod of productList;" [value]="prod.id">{{ prod.productName }}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </div>
+              <div class="col ew-mn-50">
+                <mat-form-field appearance="fill" class="w-100"
+                                *ngIf="item.get('variationList').value && item.get('variationList').value.length > 0 else novariation">
+                  <mat-label>Variation</mat-label>
+                  <mat-select matNativeControl formControlName="advancedPriceId" required>
+                    <mat-option *ngFor="let variation of item.get('variationList').value;"
+                                [value]="variation.id">{{ variation.title }}</mat-option>
+                  </mat-select>
+                </mat-form-field>
+
+                <ng-template #novariation>
+                  <span class="variation_chip">No Variation</span>
+                </ng-template>
+              </div>
+              <div class="col ew-mn-50">
+                <mat-form-field appearance="fill" class="w-100">
+                  <mat-label>Quantity</mat-label>
+                  <input matInput formControlName="quantity" type="text">
+                </mat-form-field>
+              </div>
+              <div class="col ew-mn-50">
+                <mat-form-field appearance="fill" class="w-100">
+                  <mat-label>Price</mat-label>
+                  <input matInput formControlName="price" type="text">
+                </mat-form-field>
+              </div>
+              <div class="col ew-mn-50">
+                <mat-form-field appearance="fill" class="w-100">
+                  <mat-label>Sub Total</mat-label>
+                  <input matInput readonly formControlName="subTotal" type="text">
+                </mat-form-field>
+              </div>
+              <div class="col-auto">
+                <button mat-button color="warn" type="button" (click)="removeItem(item, i)">Remove -</button>
+              </div>
+            </div>
+          </ng-container>
+        </div>
+      </div>
+    </div>
+
+    <mat-slide-toggle formControlName="canPriceAltered" color="primary" class="mr-15 mb-15">Can Price altered at the
+      time of order?
+    </mat-slide-toggle>
+
+
+    <div class="button_wrapper">
+      <button mat-raised-button color="primary" class="mr-20"
+              type="submit">{{ (productComboId) ? 'Update' : 'Add'}}</button>
+      <button mat-raised-button color="warn" type="button" routerLink="/admin/product-combo/list">Cancel</button>
+    </div>
+  </div>
 </form>
