--- a/src/app/admin/branch-profile/basic-profile/basic-profile.component.html
+++ b/src/app/admin/branch-profile/basic-profile/basic-profile.component.html
@@ -151,7 +151,7 @@
           <div class="col-sm-4">
             <mat-form-field appearance="fill" class="w-100 mb-5">
               <mat-label>Method Title</mat-label>
-              <input type="text" [ngModel]="item.methodTitle" matInput>
+              <input type="text" readonly [ngModel]="item.methodTitle" matInput>
             </mat-form-field>
           </div>
         </div>
