--- a/src/app/admin/orders/components/order-lists/order-lists.component.html
+++ b/src/app/admin/orders/components/order-lists/order-lists.component.html
@@ -72,7 +72,7 @@
                             <mat-checkbox [(ngModel)]="item.isSelected"></mat-checkbox>
                         </td>
                         <td>
-                            <button mat-icon-button type="button" [routerLink]="['/admin/order/update/'+item.id]">
+                            <button mat-icon-button type="button" [routerLink]="['/admin/order/list/'+item.id]">
                                 <img src="assets/images/icons/EDIT.svg" alt="" class="icon_img">
                             </button>
                         </td>
