--- a/src/app/admin/branch-profile/app-guide/app-guide.component.html
+++ b/src/app/admin/branch-profile/app-guide/app-guide.component.html
@@ -1,1 +1,101 @@
-<p>app-guide works!</p>
+<h2>Order table Sortcuts</h2>
+<div class="table-responsive">
+    <table class="table account_table guid_table">
+        <thead>
+            <tr>
+                <th class="ew-150">Shortcut Keys</th>
+                <th>Description</th>
+            </tr>
+        </thead>
+        <tbody>
+                <tr>
+                    <td>
+                        F1
+                    </td>
+                    <td>
+                        For Search Items
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        F2 / Ctrl+n
+                    </td>
+                    <td>
+                        For New Orders
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        F3 / Ctrl+s
+                    </td>
+                    <td>
+                        For Save Order
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        F4
+                    </td>
+                    <td>
+                        For KOT Print
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        F6
+                    </td>
+                    <td>
+                        For Reopen Compleated order
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        F9
+                    </td>
+                    <td>
+                        For Print Bill
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        F11
+                    </td>
+                    <td>
+                        For Full Screen
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        F12
+                    </td>
+                    <td>
+                        For Cancel Order
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Esc
+                    </td>
+                    <td>
+                        For Close Oder Window
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Down / Top Arrow
+                    </td>
+                    <td>
+                        To Select Item in Order window
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Left / Right Arrow
+                    </td>
+                    <td>
+                        To Change Item Quantity
+                    </td>
+                </tr>
+        </tbody>
+    </table>
+</div>
